--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RBI Compliance Management System</title>
+    <title>Vigilant</title>
     
     <!-- Modern Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
